--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           height: 100vh;
         }
       </style>
-    <title>Document</title>
+    <title>African Sats Orbtis</title>
 </head>
 <body>
     <div id="top-container">Earth with some african satellites orbiting around </div>
